[package]
name = "biscuit"
version = "0.5.0-beta2"
edition = "2018"
authors = ["Yong Wen Chua <me@yongwen.xyz>", "Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT"
readme = "README.md"
description = """A pure rust library to work with Javascript Object Signing and Encryption(JOSE),
including JSON Web Tokens (JWT), JSON Web Signature (JWS) and JSON Web Encryption (JWE)."""
homepage = "https://github.com/setttle/biscuit-rsa"
repository = "https://github.com/setttle/biscuit-rsa"
documentation = "https://docs.rs/biscuit-rsa/"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming", "pure-rust"]

[badges]
travis-ci = { repository = "lawliet89/biscuit" }

[lib]
name = "biscuit"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
base64 = { version = "0.12.0", optional = true }
chrono = "0.4.13"
data-encoding = "2.3.0"
once_cell = "1.4.0"
num = "0.3"
ring = { version = "~0.16.15", optional = true }

hmac = { version = "0.9.0", optional = true }
rsa = { version = "0.3.0", optional = true }
ecdsa = { version = "0.7.2", optional = true }
aes-gcm = { version = "0.6.0", optional = true }
rand = { version = "0.7.0", default-features = false }
serde = { version = "1.0.114", features=["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = { version = "0.9.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
# Treat warnings as a build error.
strict = []
default = ["ring_impl"]

ring_impl = ["ring"]
rust_crypto_impl = ["base64", "rsa", "rand/std", "sha2", "hmac", "aes-gcm", "ecdsa"]
